# millmux

./: .gitignore  Cargo.toml  README.md
crates/millrace-sessions/: Cargo.toml
crates/millrace-sessions-core/: Cargo.toml
crates/millrace-sessions-core/src/: error.rs  events.rs  ids.rs  lib.rs  paths.rs  protocol.rs  redaction.rs  scrollback.rs  state.rs  storage.rs  width.rs  workspace.rs
crates/millrace-sessions-core/tests/: protocol_contract.rs
crates/millrace-sessions-host/: Cargo.toml
crates/millrace-sessions-host/src/: bootstrap.rs  doctor.rs  lib.rs  reconcile.rs  registry.rs  server.rs  stop.rs  worker_launcher.rs
crates/millrace-sessions-host/tests/: doctor.rs  host_bootstrap.rs  millrace_binding.rs  protocol_contract.rs  session_lifecycle.rs
crates/millrace-sessions-tui/: Cargo.toml
crates/millrace-sessions-tui/src/: app.rs  keymap.rs  lib.rs  pane.rs  renderer.rs  shell.rs  terminal.rs  width.rs
crates/millrace-sessions-tui/tests/: render_snapshots.rs  shell_context.rs  terminal_compat.rs  terminal_width_policy.rs
crates/millrace-sessions-worker/: Cargo.toml
crates/millrace-sessions-worker/src/: control.rs  lib.rs  lifecycle.rs  logging.rs  pipe.rs  pty.rs
crates/millrace-sessions-worker/tests/: lifecycle.rs  logging.rs  pty.rs
crates/millrace-sessions/src/: attach.rs  client.rs  cockpit.rs  commands.rs  console.rs  context_export.rs  launch_env.rs  main.rs  output.rs
crates/millrace-sessions/tests/: attach_smoke.rs  cli_smoke.rs  doctor_commands.rs  lifecycle_commands.rs  millrace_binding.rs  start_smoke.rs
docs/: 2026-07-07-native-substrate-baseline.md  2026-07-07-native-substrate-remediation-qa.md  2026-07-09-batch-3-attention-structured-status.md  2026-07-09-batch-4-control-api.md  2026-07-10-terminal-trust-raw-attach.md  cockpit-pane-view-model.md  m1-dogfood.md  m2c-agent-cockpit.md  m2e-hardening-release-dogfood.md  r7-cockpit-release-qa.md  v0.4-dogfood.md  v0.4-release-qa.md
scripts/: verify-package-width-graph.sh
