[workspace]
resolver = "2"
members = [
    "crates/millrace-sessions-core",
    "crates/millrace-sessions-host",
    "crates/millrace-sessions-worker",
    "crates/millrace-sessions-tui",
    "crates/millrace-sessions",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/tim-osterhus/millmux"
rust-version = "1.78"

[workspace.dependencies]
assert_cmd = "2.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
directories = "5.0"
insta = "1.39"
nix = { version = "0.29", features = ["fs", "process", "signal", "socket", "term"] }
portable-pty = "0.8"
predicates = "3.1"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
vt100 = "0.16.2"
