[workspace]
resolver = "2"
members = [
    "crates/millrace-sessions-core",
    "crates/millrace-sessions-host",
    "crates/millrace-sessions-worker",
    "crates/millrace-sessions-tui",
    "crates/millrace-sessions",
    "vendor/vt100-millmux",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/tim-osterhus/millmux"
rust-version = "1.78"

[workspace.dependencies]
assert_cmd = "2.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.28", features = ["bracketed-paste"] }
directories = "5.0"
insta = "1.39"
nix = { version = "0.29", features = ["fs", "process", "signal", "socket", "term"] }
portable-pty = "0.8"
predicates = "3.1"
ratatui = "=0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.38", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-segmentation = "=1.12.0"
unicode-width-renderer = { package = "unicode-width", version = "=0.2.0" }
uuid = { version = "1.8", features = ["serde", "v4"] }
vt100 = { package = "millrace-terminal-vt100", version = "=0.16.2", path = "vendor/vt100-millmux" }
