[package]
name = "millrace-sessions-core"
version = "0.2.0"
description = "Core types, protocol contracts, and persistence helpers for millrace-sessions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
nix.workspace = true
tempfile.workspace = true
