[package]
name = "millrace-sessions-core"
version = "0.2.0"
description = "Core types, protocol contracts, and persistence helpers for millrace-sessions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
vt100.workspace = true

[dev-dependencies]
nix.workspace = true
tempfile.workspace = true
