[package]
name = "millrace-sessions-host"
version = "0.2.0"
description = "Local SessionControl host daemon for millrace-sessions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
millrace-sessions-core = { path = "../millrace-sessions-core", version = "0.2.0" }
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
