[package]
name = "millrace-sessions-worker"
version = "0.1.0"
description = "Per-session PTY worker for millrace-sessions"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
millrace-sessions-core = { path = "../millrace-sessions-core", version = "0.1.0" }
nix.workspace = true
portable-pty.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
path = "src/lib.rs"
